# marshal-parser

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: cargo2rpm.rs  stdlib.rs
src/: lib.rs  magic.rs  main.rs  objects.rs  parser.rs  print.rs
tests/: cargo2rpm.rs  compare.py  stdlib.rs  tests.rs  utils.rs
tests/data/: LICENSE  README.md
tests/data/cargo2rpm/: README.md
tests/data/python3.10/: README.md
tests/data/python3.11/: README.md
tests/data/python3.12/: README.md
tests/data/python3.13/: README.md
tests/data/python3.8/: README.md
tests/data/python3.9/: README.md
