[package]
name = "marshal-parser"
version = "0.1.0"
edition = "2021"

description = "Parser for Python's \"marshal\" serialization format"
authors = ["Fabio Valentini <decathorpe@gmail.com>"]
exclude = ["/rustfmt.toml", "/tests/data/python*/", "/tests/stdlib.rs"]
readme = "README.md"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "marshal-parser"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:anyhow"]

[dependencies]
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
log = "0.4"
num-bigint = "0.4"
pretty-hex = "0.4"
textwrap = { version = "0.16", default-features = false }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
glob = "0.3"

[lints.rust]
dead-code = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
