[package]
name = "marshal-parser"
version = "0.1.0"
edition = "2021"

description = "Parser for Python's \"marshal\" serialization format"
authors = ["Fabio Valentini <decathorpe@gmail.com>"]
exclude = ["/rustfmt.toml", "/tests/data/python*/", "/tests/stdlib.rs"]
readme = "README.md"
license = "MIT"

[profile.release]
codegen-units = 1
lto = true

[[bin]]
name = "marshal-parser"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:anyhow"]
fancy = ["dep:pretty-hex", "dep:textwrap"]

[dependencies]
log = "0.4"
num-bigint = "0.4"
thiserror = "1"

# cli
anyhow = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

# fancy
pretty-hex = { version = "0.4", optional = true }
textwrap = { version = "0.16", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1"
glob = "0.3"

[lints.rust]
dead-code = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
